fix alignment issues

--- a/src/components/Synthetics/GmSwap/GmSwapBox/GmSwapBox.scss
+++ b/src/components/Synthetics/GmSwap/GmSwapBox/GmSwapBox.scss
@@ -51,7 +51,7 @@
 }
 
 .gm-toast {
-  line-height: 1.5;
+  line-height: 1.4;
 }
 
 @media (max-width: 900px) {
